fixed z-index px

--- a/src/bp/ui-studio/src/web/views/FlowBuilder/inspector/style.scss
+++ b/src/bp/ui-studio/src/web/views/FlowBuilder/inspector/style.scss
@@ -28,7 +28,7 @@
 }
 
 .closeIcon {
-  z-index: 10px;
+  z-index: 10;
   top: 40px;
   right: 10px;
   position: absolute;
